# cloudana

./: README.md
backend/: main.py  requirements.txt
backend/api/: __init__.py  governance.py  job.py  stake.py  worker.py
backend/config/: settings.py
backend/db/: __init__.py  base.py  governance.py  job.py  stake.py  worker.py
backend/services/: __init__.py  governance_service.py  job_service.py  stake_service.py  worker_service.py
backend/solana_client/: provider.py  staking.py
backend/tasks/: __init__.py  proof_queue.py  slashing_watchdog.py
backend/zk/: verifier.py  verifier_adapter.rs
circuits/examples/: hash_check.circom  matrix_mult.circom
circuits/verifier_contracts/: hash_check.rs  hash_check.sol
rust/programs/: Cargo.toml
rust/programs/governance_dao/: Cargo.toml
rust/programs/governance_dao/src/: instructions.rs  lib.rs  state.rs
rust/programs/job_escrow/: Cargo.toml
rust/programs/job_escrow/src/: instructions.rs  lib.rs  state.rs
rust/programs/slashing_engine/: Cargo.toml
rust/programs/slashing_engine/src/: instructions.rs  lib.rs  state.rs
rust/programs/staking_manager/: Cargo.toml
rust/programs/staking_manager/src/: instructions.rs  state.rs
rust/programs/worker_registry/: Cargo.toml
rust/programs/worker_registry/src/: instructions.rs  lib.rs  state.rs
